; ModuleID = '/home/carl/AnghaBench/twemproxy/src/extr_nc_server.c_server_pool_each_disconnect.c'
source_filename = "/home/carl/AnghaBench/twemproxy/src/extr_nc_server.c_server_pool_each_disconnect.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.server_pool = type { i32 }

@server_each_disconnect = common dso_local global i32 0, align 4
@NC_OK = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i8*, i8*)* @server_pool_each_disconnect to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @server_pool_each_disconnect(i8* %0, i8* %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca %struct.server_pool*, align 8
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = bitcast i8* %8 to %struct.server_pool*
  store %struct.server_pool* %9, %struct.server_pool** %7, align 8
  %10 = load %struct.server_pool*, %struct.server_pool** %7, align 8
  %11 = getelementptr inbounds %struct.server_pool, %struct.server_pool* %10, i32 0, i32 0
  %12 = load i32, i32* @server_each_disconnect, align 4
  %13 = call i64 @array_each(i32* %11, i32 %12, i32* null)
  store i64 %13, i64* %6, align 8
  %14 = load i64, i64* %6, align 8
  %15 = load i64, i64* @NC_OK, align 8
  %16 = icmp ne i64 %14, %15
  br i1 %16, label %17, label %19

17:                                               ; preds = %2
  %18 = load i64, i64* %6, align 8
  store i64 %18, i64* %3, align 8
  br label %21

19:                                               ; preds = %2
  %20 = load i64, i64* @NC_OK, align 8
  store i64 %20, i64* %3, align 8
  br label %21

21:                                               ; preds = %19, %17
  %22 = load i64, i64* %3, align 8
  ret i64 %22
}

declare dso_local i64 @array_each(i32*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
